tests/specs/default_exports_declared_earlier.txt
# mod.ts
function foo(): void {}
export default foo;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | function foo(): void {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function default(): void


# output.json
[
  {
    "name": "default",
    "isDefault": true,
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [],
          "returnType": {
            "repr": "void",
            "kind": "keyword",
            "keyword": "void"
          },
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  }
]
